<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/obs"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/fd_Icon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/directory_icon"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/TextViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/fd_Icon1"
        android:singleLine="true"
        android:text="@string/nombre"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewItem"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/fd_Icon1"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/TextViewItem"/>

    <TextView
        android:id="@+id/TextViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewItem"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/fecha"
        app:layout_constraintBottom_toBottomOf="@+id/TextView02"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="46dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
